<resources>
    <string name="app_name">SPAC Stars</string>
    <string name="welcome">Welcome</string>
    <string name="todo">TODO</string>
    <string name="show_160_listing"><![CDATA[Show Listing]]></string>
    <string name="search_160_social_160_media"><![CDATA[Search Social Media]]></string>
    <string name="alert_160_setup"><![CDATA[Alert Setup]]></string>
    <string name="spac_160_live_160_prices"><![CDATA[SPAC Live Prices]]></string>
    <string name="add_remove">Add/Remove</string>
    <string name="preferences">Preferences</string>
    <string name="google">Google</string>
    <string name="twitter">Twitter</string>
    <string name="reddit">Reddit</string>
    <string name="facebook">Facebook</string>
    <string name="search_terms">Search terms</string>
    <string name="name_settings">Name</string>
    <string name="ticker_settings">Ticker</string>
    <string name="ipo_date_settings">IPO Date</string>
    <string name="management_settings">Management</string>
    <string name="cash_in_trust_settings">Cash in Trust</string>
    <string name="capital_structure_settings">Capital Structure</string>
    <string name="hide_count_1_description">Enable/Disable Name Column</string>
    <string name="hide_count_2_description">Enable/Disable Ticker Column</string>
    <string name="hide_count_3_description">Enable/Disable IPO Date Column</string>
    <string name="hide_count_4_description">Enable/Disable Management Column</string>
    <string name="hide_count_5_description">Enable/Disable Cash in Trust Column</string>
    <string name="hide_count_6_description">Enable/Disable Capital Structure Column</string>
    <string name="addremove">addremove</string>
    <string name="saved_spacs">Saved SPACS</string>
    <string name="add_spacs">Add SPACs</string>
    <string name="remove">Remove</string>
    <string name="all">All</string>
    <string name="top_10_daily_price_change">Top 10 Daily Price Change</string>
    <string name="bottom_10_daily_price_change">Bottom 10 Daily Price Change</string>
    <string name="top_10_weekly_price_change">Top 10 Weekly Price Change</string>
    <string name="bottom_10_weekly_price_change">Bottom 10 Weekly Price Change</string>
    <string name="top_10_monthly_price_change">Top 10 Monthly Price Change</string>
    <string name="bottom_10_monthly_price_change">Bottom 10 Monthly Price Change</string>
    <string name="Refresh">Refresh</string>
</resources>