<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
<!--    <item-->
<!--        android:id="@+id/dropdown_menu"-->
<!--        android:icon="@drawable/ic_baseline_menu_24"-->
<!--        android:title="dropdown"-->
<!--        app:showAsAction="ifRoom"-->
<!--        >-->
<!--        <menu>-->
<!--            -->
<!--        </menu>-->
<!--    </item>-->
    <item
        android:id="@+id/showlisting"
        android:title="Show&#160;Listing"
        >
        <menu>
            <item
                android:id="@+id/showAll"
                android:title="Show&#160;All"
                />
            <item
                android:id="@+id/preLOI"
                android:title="Pre&#160;LOI"
                />
            <item
                android:id="@+id/defAgree"
                android:title="Definitive&#160;Agreement"
                />
<!--            <item-->
<!--                android:id="@+id/optionChads"-->
<!--                android:title="Option&#160;Chads"-->
<!--                />-->
            <item
                android:id="@+id/preUnit"
                android:title="Pre&#160;Unit&#160;Split"
                />
            <item
                android:id="@+id/preIPO"
                android:title="Pre&#160;IPO"
                />
        </menu>
    </item>
    <item
        android:id="@+id/searchsocialmedia"
        android:title="@string/search_160_social_160_media"
        />
    <item
        android:id="@+id/alertsetup"
        android:title="@string/alert_160_setup"
        />
    <item
        android:id="@+id/spacliveprices"
        android:title="@string/spac_160_live_160_prices"
        >
        <menu >
            <item
                android:id="@+id/all"
                android:title="@string/all" />
            <item
                android:id="@+id/top10DailyPriceChange"
                android:title="@string/top_10_daily_price_change" />
            <item
                android:id="@+id/bottom10DailyPriceChange"
                android:title="@string/bottom_10_daily_price_change" />
            <item
                android:id="@+id/top10WeeklyPriceChange"
                android:title="@string/top_10_weekly_price_change" />
            <item
                android:id="@+id/bottom10WeeklyPriceChange"
                android:title="@string/bottom_10_weekly_price_change" />
            <item
                android:id="@+id/top10MonthlyPriceChange"
                android:title="@string/top_10_monthly_price_change" />
            <item
                android:id="@+id/bottom10MonthlyPriceChange"
                android:title="@string/bottom_10_monthly_price_change" />
        </menu>
    </item>
    <item
        android:id="@+id/addremove"
        android:title="@string/add_remove"
        />
    <item
        android:id="@+id/preferences"
        android:orderInCategory="100"
        android:title="@string/preferences"
        app:showAsAction="never" />

</menu>